website/versioned_docs/version-1.9.x/reference/sql/index.md
---
title: 'SQL Reference'
sidebar_label: 'SQL Reference'
pagination_prev: 'reference/index'
sidebar_position: 2
pagination_next: null
---

This section provides a comprehensive reference for SQL support in Spice.ai, including syntax, data types, operators, functions, and system features. The reference is organized by topic for ease of navigation.

## Table of Contents

### [SELECT Syntax](sql/select)

- [WITH Clause](sql/select#with-clause)
- [SELECT Clause](sql/select#select-clause)
- [FROM Clause](sql/select#from-clause)
- [WHERE Clause](sql/select#where-clause)
- [JOIN Clause](sql/select#join-clause)
- [GROUP BY Clause](sql/select#group-by-clause)
- [HAVING Clause](sql/select#having-clause)
- [UNION Clause](sql/select#union-clause)
- [ORDER BY Clause](sql/select#order-by-clause)
- [LIMIT Clause](sql/select#limit-clause)
- [EXCLUDE and EXCEPT Clause](sql/select#exclude-and-except-clause)

### [Subqueries](sql/subqueries)

- [Subquery Operators](sql/subqueries#subquery-operators)
- [SELECT Clause Subqueries](sql/subqueries#select-clause-subqueries)
- [FROM Clause Subqueries](sql/subqueries#from-clause-subqueries)
- [WHERE Clause Subqueries](sql/subqueries#where-clause-subqueries)
- [HAVING Clause Subqueries](sql/subqueries#having-clause-subqueries)
- [Subquery Categories](sql/subqueries#subquery-categories)

### [EXPLAIN](sql/explain)

- [EXPLAIN ANALYZE](sql/explain#explain-analyze)

### [Information Schema](sql/information_schema)

- [SHOW TABLES](sql/information_schema#show-tables)
- [SHOW COLUMNS](sql/information_schema#show-columns)
- [SHOW ALL (configuration options)](sql/information_schema#show-all-configuration-options)

### [AI Functions](sql/ai)

- [ai (LLM Text Generation)](sql/ai#ai)
- [embed (Vector Embeddings)](sql/ai#embed)

### [Operators and Literals](sql/operators)

- [Numerical Operators](sql/operators#numerical-operators)
- [Comparison Operators](sql/operators#comparison-operators)
- [Logical Operators](sql/operators#logical-operators)
- [Bitwise Operators](sql/operators#bitwise-operators)
- [Other Operators](sql/operators#other-operators)

### [Scalar Functions](sql/scalar_functions)

- [Math Functions](sql/scalar_functions#math-functions)
- [Conditional Functions](sql/scalar_functions#conditional-functions)
- [String Functions](sql/scalar_functions#string-functions)
- [Binary String Functions](sql/scalar_functions#binary-string-functions)
- [Regular Expression Functions](sql/scalar_functions#regular-expression-functions)
- [Time and Date Functions](sql/scalar_functions#time-and-date-functions)
- [Array Functions](sql/scalar_functions#array-functions)
- [Struct Functions](sql/scalar_functions#struct-functions)
- [Map Functions](sql/scalar_functions#map-functions)
- [Hashing Functions](sql/scalar_functions#hashing-functions)
- [Union Functions](sql/scalar_functions#union-functions)
- [Other Functions](sql/scalar_functions#other-functions)

Spark-compatible scalar functions such as `array`, `bit_get`, `date_add`, `like`, and `parse_url` follow the semantics documented in the [Spark SQL built-in function reference](https://spark.apache.org/docs/latest/api/sql/index.html).

### [Aggregate Functions](sql/aggregate_functions)

- [General Aggregate Functions](sql/aggregate_functions#general-functions)
- [Statistical Aggregate Functions](sql/aggregate_functions#statistical-functions)
- [Approximate Aggregate Functions](sql/aggregate_functions#approximate-functions)

### [JSON Functions and Operators](sql/json)

- [JSON Functions](sql/json#json-functions)
- [JSON Operators](sql/json#json-operators)
- [Usage Examples](sql/json#usage-examples)

### [Search](sql/search)

- [Vector Search (`vector_search`)](sql/search#vector-search-vector_search)
- [Full-Text Search (`text_search`)](sql/search#full-text-search-text_search)
- [Lexical Search: LIKE, =, and Regex](sql/search#lexical-search-like--and-regex)

### [Prepared Statements](sql/prepared_statements)

- [Positional Arguments](sql/prepared_statements#positional-arguments)

### [DML (Data Manipulation Language)](sql/dml)

- [INSERT Statement](sql/dml#insert)

Refer to each section for detailed syntax, supported features, and examples.
