website/versioned_docs/version-1.11.x/reference/sql/index.md
---
title: 'SQL Reference'
sidebar_label: 'SQL Reference'
pagination_prev: 'reference/index'
sidebar_position: 2
pagination_next: null
---

This section provides a comprehensive reference for SQL support in Spice.ai, including syntax, data types, operators, functions, and system features. The reference is organized by topic for ease of navigation.

## Table of Contents

### [SELECT Syntax](select.md)

- [WITH Clause](select.md#with-clause)
- [SELECT Clause](select.md#select-clause)
- [FROM Clause](select.md#from-clause)
- [WHERE Clause](select.md#where-clause)
- [JOIN Clause](select.md#join-clause)
- [GROUP BY Clause](select.md#group-by-clause)
- [HAVING Clause](select.md#having-clause)
- [QUALIFY Clause](select.md#qualify-clause)
- [UNION Clause](select.md#union-clause)
- [ORDER BY Clause](select.md#order-by-clause)
- [LIMIT Clause](select.md#limit-clause)
- [EXCLUDE and EXCEPT Clause](select.md#exclude-and-except-clause)

### [Subqueries](subqueries.md)

- [Subquery Operators](subqueries.md#subquery-operators)
- [SELECT Clause Subqueries](subqueries.md#select-clause-subqueries)
- [FROM Clause Subqueries](subqueries.md#from-clause-subqueries)
- [WHERE Clause Subqueries](subqueries.md#where-clause-subqueries)
- [HAVING Clause Subqueries](subqueries.md#having-clause-subqueries)
- [Subquery Categories](subqueries.md#subquery-categories)

### [EXPLAIN](explain.md)

- [EXPLAIN ANALYZE](explain.md#explain-analyze)

### [Information Schema](information_schema.md)

- [SHOW TABLES](information_schema.md#show-tables)
- [SHOW COLUMNS](information_schema.md#show-columns)
- [SHOW ALL (configuration options)](information_schema.md#show-all-configuration-options)

### [AI Functions](ai.md)

- [ai (LLM Text Generation)](ai.md#ai)
- [embed (Vector Embeddings)](ai.md#embed)

### [Operators and Literals](operators.md)

- [Numerical Operators](operators.md#numerical-operators)
- [Comparison Operators](operators.md#comparison-operators)
- [Logical Operators](operators.md#logical-operators)
- [Bitwise Operators](operators.md#bitwise-operators)
- [Type Casting Operators](operators.md#type-casting-operators)
- [Other Operators](operators.md#other-operators)
- [Literals](operators.md#literals)

### [Scalar Functions](scalar_functions.md)

- [Math Functions](scalar_functions.md#math-functions)
- [Conditional Functions](scalar_functions.md#conditional-functions)
- [String Functions](scalar_functions.md#string-functions)
- [Binary String Functions](scalar_functions.md#binary-string-functions)
- [Regular Expression Functions](scalar_functions.md#regular-expression-functions)
- [Time and Date Functions](scalar_functions.md#time-and-date-functions)
- [Array Functions](scalar_functions.md#array-functions)
- [Struct Functions](scalar_functions.md#struct-functions)
- [Map Functions](scalar_functions.md#map-functions)
- [Hashing Functions](scalar_functions.md#hashing-functions)
- [Union Functions](scalar_functions.md#union-functions)
- [Other Functions](scalar_functions.md#other-functions)

Spark-compatible scalar functions such as `array`, `bit_get`, `date_add`, `like`, and `parse_url` follow the semantics documented in the [Spark SQL built-in function reference](https://spark.apache.org/docs/latest/api/sql/index.html).

### [Aggregate Functions](aggregate_functions.md)

- [Filter Clause](aggregate_functions.md#filter-clause)
- [WITHIN GROUP / Ordered-set Aggregates](aggregate_functions.md#within-group--ordered-set-aggregates)
- [General Aggregate Functions](aggregate_functions.md#general-functions)
- [Statistical Aggregate Functions](aggregate_functions.md#statistical-functions)
- [Approximate Aggregate Functions](aggregate_functions.md#approximate-functions)

### Window Functions

Window functions perform calculations across sets of rows related to the current row. Spice supports window functions using the `OVER` clause with aggregate and ranking functions. See [Aggregate Functions](aggregate_functions.md) for functions that support the `OVER` clause, including `ROW_NUMBER`, `RANK`, `DENSE_RANK`, `LAG`, `LEAD`, `FIRST_VALUE`, `LAST_VALUE`, and `NTH_VALUE`.

**Example:**

```sql
SELECT
  dept_id,
  employee_name,
  salary,
  ROW_NUMBER() OVER (PARTITION BY dept_id ORDER BY salary DESC) AS rank
FROM employees;
```

### [JSON Functions and Operators](json.md)

- [JSON Functions](json.md#json-functions)
- [JSON Operators](json.md#json-operators)
- [Usage Examples](json.md#usage-examples)

### [Search](search.md)

- [Vector Search (`vector_search`)](search.md#vector-search-vector_search)
- [Full-Text Search (`text_search`)](search.md#full-text-search-text_search)
- [Lexical Search: LIKE, =, and Regex](search.md#lexical-search-like--and-regex)

### [Prepared Statements](prepared_statements.md)

- [Positional Arguments](prepared_statements.md#positional-arguments)

### [DML (Data Manipulation Language)](dml.md)

- [INSERT Statement](dml.md#insert)

### Data Types

Spice uses Apache Arrow data types internally. For data type compatibility with accelerators, see [Data Type Reference](/docs/reference/datatypes/index.md). Common SQL types include:

| SQL Type          | Description                         |
| ----------------- | ----------------------------------- |
| `INT`, `BIGINT`   | Integer types                       |
| `FLOAT`, `DOUBLE` | Floating-point types                |
| `VARCHAR`, `TEXT` | String types                        |
| `BOOLEAN`         | Boolean type                        |
| `TIMESTAMP`       | Timestamp with nanosecond precision |
| `DATE`            | Date type                           |
| `DECIMAL`         | Arbitrary precision numeric         |

Use `CAST(expression AS type)` or `expression::type` to convert between types.

Refer to each section for detailed syntax, supported features, and examples.
